@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2004/01/20 12:22:18 agc Exp $
+# $NetBSD: Makefile,v 1.8 2004/03/31 07:20:21 xtraeme Exp $
 
 DISTNAME=	IglooFTP-0.6.1
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SUNSITE:=system/network/file-transfer/} \
 		ftp://littleigloo.org/pub/iglooftp/
@@ -12,11 +12,11 @@ HOMEPAGE=	http://www.littleigloo.org/iglooftp.php3
 COMMENT=	Easy to use FTP client for X Window System
 
 WRKSRC=		${WRKDIR}/${DISTNAME}/src
-USE_BUILDLINK2=	yes
-USE_X11BASE=	yes
+USE_BUILDLINK3=	yes
+USE_X11=	yes
 
 post-extract:
 	${RM} ${WRKSRC}/../share/docs/LICENSE~
 
-.include "../../x11/gtk/buildlink2.mk"
+.include "../../x11/gtk/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
